# livechrg-api

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  ruff.toml  run.py  settings.py  test.py
.github/workflows/: PostGIS.yml  pull-request.yml
fluentd/: Dockerfile
fluentd/conf/: fluent.conf
maintenance/: chargers_maintenance_service.py
migrations/: 20240116202009_init.down.sql  20240116202009_init.up.sql  20240124181421_create_tokens_table.down.sql  20240124181421_create_tokens_table.up.sql
src/api/: app.py  auth.py  depends.py  security.py
src/api/middlewares/: errors.py  logger.py
src/api/routers/inner/: models.py  stations.py
src/api/routers/v1/: models.py  stations.py
src/repositories/postgres/: chargers.py  comments.py  events.py  stations.py  tokens.py
src/services/: stations.py  tokens.py
src/utils/: calculate_average_rating.py  filter_entities.py
src/utils/logging/: formatter.py  logger.py
tests/utils/: test_calculate_average_rating.py  test_chargers_maintenance_service_delete_duplicates_sql.py  test_chargers_maintenance_service_identify_duplicates.py  test_filter_entities.py  test_format_chargers.py  test_is_chargers_equal.py
tests/validation/: test_area_request_validation.py
tests_functional/: conftest.py  helpers.py
tests_functional/api/: test_add_stations.py  test_auth.py  test_get_station_by_area_request_validation.py  test_get_station_by_source_and_inner_id.py  test_get_station_inner_id_and_source_by_station_id.py  test_get_stations_by_area.py  test_post_stations.py  test_token_stats_increment.py
